--- a/css/style.css
+++ b/css/style.css
@@ -35,23 +35,19 @@ header{
 }
 
 .container{
-    width: 720px;
-    height: 720px;
     margin: 3rem auto;
-    background-color: white;
+    display: flex;
+    justify-content: center;
 }
 
 .grid{
     display: flex;
-    width: 100%;
-    height: 100%;
     flex-wrap: wrap;
 }
 
 .square{
-    width: calc(100% / 10);
-    height: calc(100% / 10);
-    cursor: pointer;
+    display: flex;
+    justify-content: center;
     background-color: rgb(53, 206, 79);
     border: 1px solid white;
 }
